--- a/src/components/cardMui/CardMui.css
+++ b/src/components/cardMui/CardMui.css
@@ -1,6 +1,7 @@
 .card {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22) !important;
   height: 100%;
+  margin: 1em auto 1em auto;
 }
 .open {
   display: flex;
