--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
 
@@ -28,8 +28,12 @@
 .text-box {
   color: #fff;
   position: absolute;
-
+  background-color: rgba(255, 255, 255, 0.3);
   margin-left: 5%;
+  padding: 15px;
+  border-radius: 5px;
+  margin-top: 30px;
+  padding-bottom: 0;
 }
 
 .text-box p {
@@ -97,4 +101,24 @@
 }
 .text2 {
   text-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.inputSearchHome {
+  width: 100% !important;
+  /* background-color: #fff; */
+  display: flex;
+  justify-content: space-around;
+}
+
+/* .transparance-conteneur {
+  padding: 15px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
+  margin-top: 30px;
+  padding-bottom: 0;
+  
+} */
+
+.prediction {
+  background-color: #fff !important;
 }
