--- a/src/components/autoComplete/InputSearch.css
+++ b/src/components/autoComplete/InputSearch.css
@@ -13,8 +13,9 @@ ul,
   text-align: start !important;
 }
 .btnSearch {
-  padding: 2px;
-  margin-bottom: 2px;
+  padding: 2%;
+
+  width: 100%;
 }
 .btnSearch:hover {
   background-color: rgb(212, 198, 198);
@@ -30,6 +31,7 @@ ul,
   position: absolute;
   margin-top: 9%;
   margin-left: 8px;
+  z-index: 3;
 }
 
 .adresse {
