--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,19 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic&display=swap");
 .home {
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  background-image: url("../../ressource/img/homePageImg.webp");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-color: #f2f6f4;
 }
 
-.home video {
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  object-fit: cover;
+.titleHome {
+  font-family: "IBM Plex Sans Arabic", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
 }
 
 .name-club {
@@ -28,12 +31,13 @@
 .text-box {
   color: #fff;
   position: absolute;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: #fff;
   margin-left: 5%;
-  padding: 15px;
+  padding: 2%;
   border-radius: 5px;
   margin-top: 30px;
   padding-bottom: 0;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .text-box p {
@@ -67,6 +71,7 @@
   align-items: center;
   flex-wrap: wrap;
   margin-top: 30px;
+  padding-bottom: 4%;
 }
 .animation {
   margin-left: -100px;
@@ -101,6 +106,7 @@
 }
 .text2 {
   text-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  color: black;
 }
 
 .inputSearchHome {
@@ -121,4 +127,44 @@
 
 .prediction {
   background-color: #fff !important;
+}
+
+.custom-shape-divider-bottom-1653555906 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1653555906 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 183px;
+}
+
+.custom-shape-divider-bottom-1653555906 .shape-fill {
+  fill: #edaa5f;
+}
+
+.custom-shape-divider-bottom-1653573471 {
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-bottom-1653573471 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 150px;
+}
+
+.custom-shape-divider-bottom-1653573471 .shape-fill {
+  fill: #edaa5f;
 }
