--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -157,21 +157,77 @@
   background-color: #fff !important;
 }
 
-.custom-shape-divider-bottom-1653573471 {
-  bottom: 0;
-  left: 0;
+.container-banniere {
   width: 100%;
-  overflow: hidden;
-  line-height: 0;
-}
-
-.custom-shape-divider-bottom-1653573471 svg {
+  height: auto;
   position: relative;
-  display: block;
-  width: calc(100% + 1.3px);
-  height: 150px;
+  margin-left: -16px;
+  margin-right: -16px;
+  opacity: 1;
+  background: linear-gradient(195deg, rgb(66, 66, 74), rgb(25, 25, 25));
+  color: rgb(52, 71, 103);
+  box-shadow: none;
+  overflow: hidden;
+  margin-top: 5%;
 }
 
-.custom-shape-divider-bottom-1653573471 .shape-fill {
-  fill: #edaa5f;
+.banniere-img {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  opacity: 0.6;
+  background: rgb(25 25 25);
+  color: rgb(52, 71, 103);
+  box-shadow: none;
+}
+
+.container-info-home {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+  width: 100%;
+  -webkit-box-align: center;
+  align-items: center;
+  padding: 3% 0 3% 0;
+  position: relative;
+}
+
+.container-el-home > h2 {
+  margin: 0px 0px 24px;
+  font-family: "Roboto Slab", sans-serif;
+  font-size: 2.25rem;
+  line-height: 1.3;
+  font-weight: 700;
+  opacity: 1;
+  text-transform: none;
+  vertical-align: unset;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  letter-spacing: -0.125px;
+}
+
+.container-el-home > p {
+  margin: 0px 0px 16px;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
+  font-size: 1rem;
+  font-weight: 300;
+  line-height: 1.6;
+  opacity: 0.8;
+  text-transform: none;
+  vertical-align: unset;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  letter-spacing: -0.125px;
+  margin: 0 30% 2% 30%;
+}
+
+.img-baniere-boxe {
+  width: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
+  opacity: 1;
+  background: transparent;
+  color: rgb(52, 71, 103);
+  box-shadow: none;
 }
