--- a/src/components/selectionRestoHome/selectionEte/SelectionEte.css
+++ b/src/components/selectionRestoHome/selectionEte/SelectionEte.css
@@ -118,10 +118,11 @@
   color: rgb(52, 71, 103);
   letter-spacing: -0.125px;
   font-weight: 700;
+  text-align: start;
+  display: flex;
 }
 
 .span-carte-test {
-  margin: 0px;
   font-family: Roboto, Helvetica, Arial, sans-serif;
   font-size: 0.875rem;
   line-height: 1.5;
@@ -132,4 +133,6 @@
   color: rgb(123, 128, 154);
   letter-spacing: -0.125px;
   font-weight: 400;
+  text-align: start;
+  display: flex;
 }
