--- a/src/components/carMap/CardMaps.css
+++ b/src/components/carMap/CardMaps.css
@@ -2,11 +2,24 @@
   margin: auto;
   max-height: 100vh;
   overflow: auto;
-  text-align: center;
   cursor: pointer;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
+  text-align: center;
+  width: 100%;
 }
+
+.container-carte-resto {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex-basis: 100%;
+  margin: auto;
+}
+
 /* .carte:hover{
 
 } */
@@ -26,20 +39,18 @@
 } */
 
 #map {
-  margin-top: 6%;
+  margin-top: 2%;
 }
 
 .title-ville {
   width: 100%;
   display: flex;
   justify-content: start;
-  align-items: flex-start;
+  align-items: center;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 1rem;
-  padding-right: 1rem;
+
   max-width: 80em;
-  margin-top: 4%;
 }
 
 .ville {
@@ -86,9 +97,16 @@
   top: 0;
   background-color: rgb(255, 255, 255);
   z-index: 2;
-  box-shadow: rgb(0 0 0 / 12%) -0.0625rem 0.1875rem 0.375rem;
 }
-
+.displayCard {
+  z-index: 8 !important;
+  white-space: nowrap !important;
+  pointer-events: auto !important;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  margin-bottom: 40px;
+}
 .conteneur_logo_card {
   position: absolute;
   display: flex;
