--- a/src/components/filterSelelect/FilterSelect.css
+++ b/src/components/filterSelelect/FilterSelect.css
@@ -1,11 +1,11 @@
 .conteneur-filter {
-  border-bottom: 1px solid hsl(220, 9%, 93%);
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   padding-top: 1rem;
   padding-bottom: 0.4rem;
   padding-left: 1rem;
-  max-width: 80em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   overflow: visible;
   position: sticky;
