--- a/src/components/restauDetail/RestauDetail.css
+++ b/src/components/restauDetail/RestauDetail.css
@@ -39,7 +39,7 @@
 
 .container-specialite {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: flex-start;
   flex-direction: column;
   width: 100%;
@@ -322,7 +322,7 @@
   text-align: start;
   margin-top: revert !important;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 .icone-proposition-resto > span {
