--- a/src/components/carMap/CardMaps.css
+++ b/src/components/carMap/CardMaps.css
@@ -45,7 +45,7 @@
 .title-ville {
   width: 100%;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   margin-left: auto;
   margin-right: auto;
